--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -8,10 +8,10 @@ $fonte2: 'Montserrat', sans-serif;
 /*SETTINGS!!!!!!*/
 h1{
     font-family: $fonte2;
-    font-size: 2em;
+    font-size: 3.7vw;
 }
 p{
-    font-size: 1.2em;
+    font-size: 1.8vw;
     font-family: $fonte1;
 }
 body{
@@ -79,6 +79,7 @@ body{
     width: 40%;
     flex-direction: column;
     margin-top: 80px;
+
     h1{
         color: $cor2;
     }
@@ -121,18 +122,36 @@ body{
         padding: 0;
         width: 100%;
     }
+    .container{
+        width: 100%;
+    }
     .frase{
         width: 100%;
         text-align: center;
         justify-content: center;
         h1{
+            font-size: 9vw;
             justify-content: center;
         }
+        p{
+            font-size: 6vw;
+        }
+    }
+    .btn{
+        width: 90%;
     }
     .cliente{
+        display: flex;
         justify-content: center;
+        width: 100%;
     }
     .menu{
-        display: none;
+        display: flex;
+        p{
+            display: none;
+        }
+        .fas{
+            transform: scale(2);
+        }
     }
 }
