--- a/css/estilo.css
+++ b/css/estilo.css
@@ -148,10 +148,9 @@ img {
 
 /*Cadastro clientes*/
 .containercad {
-  background-image: url(../midia/fundocad.jpg);
   background-position: bottom;
   background-repeat: no-repeat;
-  background-color: #E0E0E0;
+  background-color: #fff;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -210,6 +209,7 @@ img {
 .containercad .forms {
   width: 100%;
   text-align: center;
+  padding: 0;
 }
 
 .containercad label {
@@ -225,6 +225,10 @@ img {
 .containercad label .ic {
   padding-right: 20px;
   font-size: 25px;
+}
+
+.containercad #engcad {
+  padding: 0;
 }
 
 .containercad input, .containercad select {
