--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -114,10 +114,9 @@ img{
 }
 /*Cadastro clientes*/
 .containercad{
-    background-image: url(../midia/fundocad.jpg);
     background-position: bottom;
     background-repeat: no-repeat;
-    background-color: #E0E0E0;
+    background-color: #fff;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -154,6 +153,7 @@ img{
 .forms{
     width: 100%;
     text-align: center;
+    padding: 0;
 }
 label{
     align-items: center;
@@ -163,6 +163,9 @@ label{
         padding-right: 20px;
         font-size: 25px;
     }
+}
+#engcad{
+    padding: 0;
 }
 input, select{
     width: 80%;
